# frameworks/java/quarkus/Client/src/main/openapi/openapi.yaml
@@ -507,8 +507,14 @@ paths:
       summary: Validate Small
       tags:
       - Body Routes
-  /cache/large:
+  /cache/large/{key}:
     get:
+      parameters:
+      - name: key
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -519,8 +525,14 @@ paths:
       summary: Large
       tags:
       - Cache Routes
-  /cache/medium:
+  /cache/medium/{key}:
     get:
+      parameters:
+      - name: key
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -531,8 +543,14 @@ paths:
       summary: Medium
       tags:
       - Cache Routes
-  /cache/small:
+  /cache/small/{key}:
     get:
+      parameters:
+      - name: key
+        in: path
+        required: true
+        schema:
+          type: string
       responses:
         "200":
           description: OK
@@ -543,9 +561,14 @@ paths:
       summary: Small
       tags:
       - Cache Routes
-  /cache/vary/many:
+  /cache/vary/many/{key}:
     get:
       parameters:
+      - name: key
+        in: path
+        required: true
+        schema:
+          type: string
       - name: x-rb-channel
         in: header
         schema:
@@ -568,13 +591,17 @@ paths:
       summary: Vary Many
       tags:
       - Cache Routes
-  /cache/vary/one:
+  /cache/vary/one/{key}:
     get:
       parameters:
+      - name: key
+        in: path
+        required: true
+        schema:
+          type: string
       - name: x-rb-tenant
         in: header
         schema:
-          default: ""
           type: string
       responses:
         "200":
